added missing content

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <h3>Front end webdeveloper in de groei!</h3>
       <hr>
       <p>31 jaar, Amersfoort</p>
-      <a href="mailto:desire.vangeest@gmail.com">desire.vangeest@gmail.com</a>
+      <p><a href="mailto:desire.vangeest@gmail.com">desire.vangeest@gmail.com</a></p>
     </div>
   </div>
 </header>
-<div class=content>
+  <div class=content>
   <div class="about">
     <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
     <p>Ik heb door de jaren heen een breed palet van vaardigheden opgedaan. 
@@ -63,6 +63,10 @@
       </table>
       <h3>Cursussen/ Certificaten</h3>
       <table>
+        <tr>
+          <td>sep 2020</td>
+          <td>Gestart bij <a href="https://www.theodinproject.com/">The Odin Project</a></td>
+        </tr>
 	      <tr>
 		      <td>2018</td>
 		      <td>IPAF 3A en 3B</td>
@@ -75,7 +79,9 @@
       		<td>2008</td>
       		<td>Introductiecursus, Willem de Kooning/ Hogeschool Rotterdam</td>
       	</tr>
-      </table>  
+      </table> 
+      <h3>Portfolio</h3>
+      <p><a href="">Rock Paper Scissors</a></p> 
     </div>
     <div class="right">
       <h3>Werkervaring</h3>
