--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
 	      <li>International School of the Hague (Art en Design)</li>
       </ul>
       <h4>Creatief (vrijwilligerswerk)</h4>
-      <p>Spelleiding, plot schrijver, kostuum en rekwisiet ontwerp bij verschillende evenementen onder stichting Divergence point.<br>
-        2017-heden (kostuum en prop ontwerp tot 2019)</p>
+      <p>Spelleiding, plot schrijven, rekwisiet bouw en aankleding bij Estera LARP onder stichting Divergence point.<br>
+        2017-heden</p>
       <p>Kostuum ontwerp voor Magistratus (web serie op YouTube)<br>
         2009-2010</p>
       <p>Stagemanagement bij de Elf Fantasy Fair<br>
@@ -122,10 +122,10 @@
           HTML/ CSS/ Javascript (basis vaardigheden)</td>
       </tr>
       <tr>
-        <td>Directe ontwikkel plannen:</td>
-        <td>verdiepen Javascript (object georienteerd programeren)<br>
+        <td>Directe ontwikkelplannen:</td>
+        <td>Kennis Javascript verdiepen (object georienteerd programeren)<br>
           Kennis maken met VUE<br>
-          Verder verdiepen in HTML/CSS (Bootstrap en frameworks)</td>
+          kennis HTML/CSS verdiepen</td>
       </tr>
       <tr>
         <td>overig:</td>
