--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
     <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
     <p>Ik heb door de jaren heen een breed palet van vaardigheden opgedaan. 
       Van de Kunst, via het onderwijs de bouw in. 
-      En bij het verkennen van deze verschillende vakgebieden zijn al mijn eerdere vaardigheden altijd op een verassende manier vanpas gekomen.
+      En bij het verkennen van deze verschillende vakgebieden zijn al mijn eerdere vaardigheden altijd op een verrassende manier van pas gekomen.
     </p> 
     <p>
       Door ziekte heb ik moeten stoppen met werken in de bouw, dat ga ik heel erg missen, 
       maar ik heb in web development een nieuwe passie gevonden. 
       Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
-      De komende jaren zie ik mezelf door groeien tot full stack web developer, 
+      De komende jaren zie ik mezelf doorgroeien tot full stack web developer, 
       maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
       Daarom zoek ik een plek waar ik, als beginnende front end developer, 
-      kennis kan maken met de proffesionele workflow en echt kan beginnen met groeien.
+      kennis kan maken met de profesionele workflow en echt kan beginnen met groeien.
     </p>
   </div>
   <div class="experience">
@@ -61,7 +61,7 @@
           <td>VWO, Maerlant Lyceum</td>
         </tr>
       </table>
-      <h3>Cursussen/ Certificaten</h3>
+      <h3>Cursussen / Certificaten</h3>
       <table>
         <tr>
           <td>sep 2020</td>
@@ -77,7 +77,7 @@
       	</tr>
       	<tr>
       		<td>2008</td>
-      		<td>Introductiecursus, Willem de Kooning/ Hogeschool Rotterdam</td>
+      		<td>Introductiecursus, Willem de Kooning / Hogeschool Rotterdam</td>
       	</tr>
       </table> 
       <h3>Portfolio</h3>
@@ -85,7 +85,7 @@
     </div>
     <div class="right">
       <h3>Werkervaring</h3>
-      <h4>Bouw/ Techniek</h3>
+      <h4>Bouw / Techniek</h3>
 	      <p>Leerling Elektrotechniek<br>Electravon<br>mei 2017 – december 2018</p>
 	      <p>Hulpmonteur Elektrotechniek<br>Electravon (via Voltdetachering)<br>februari 2017</p>
 	      <p>Hulpmonteur Elektrotechniek<br>Terberg (via Voltdetachering)<br>september  2016  - december 2016</p>
