--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <img src="foto.jpg" class="profielfoto">
     <div class=title>
       <h1>Desire van Geest</h1>
-      <h3>Front end webdeveloper in de groei!</h3>
+      <h3>Front End Webdeveloper in de groei!</h3>
       <hr>
       <p>31 jaar, Amersfoort</p>
       <p><a href="mailto:desire.vangeest@gmail.com">desire.vangeest@gmail.com</a></p>
@@ -21,20 +21,22 @@
 </header>
   <div class=content>
   <div class="about">
-    <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
-    <p>Ik heb door de jaren heen een breed palet van vaardigheden opgedaan. 
-      Van de Kunst, via het onderwijs de bouw in. 
-      En bij het verkennen van deze verschillende vakgebieden zijn al mijn eerdere vaardigheden altijd op een verrassende manier van pas gekomen.
-    </p> 
-    <p>
-      Door ziekte heb ik moeten stoppen met werken in de bouw, dat ga ik heel erg missen, 
-      maar ik heb in web development een nieuwe passie gevonden. 
-      Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
-      De komende jaren zie ik mezelf doorgroeien tot full stack web developer, 
-      maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
-      Daarom zoek ik een plek waar ik, als beginnende front end developer, 
-      kennis kan maken met de profesionele workflow en echt kan beginnen met groeien.
-    </p>
+    <div id="text">
+      <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
+      <p>Ik heb door de jaren heen een breed palet van vaardigheden opgedaan. 
+        Van de Kunst, via het onderwijs de bouw in. 
+        En bij het verkennen van deze verschillende vakgebieden zijn al mijn eerdere vaardigheden altijd op een verrassende manier van pas gekomen.
+      </p> 
+      <p>
+        Door ziekte heb ik moeten stoppen met werken in de bouw, dat ga ik heel erg missen, 
+        maar ik heb in webdevelopment een nieuwe passie gevonden. 
+        Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
+        De komende jaren zie ik mezelf doorgroeien tot fullstack webdeveloper, 
+        maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
+        Daarom zoek ik een plek waar ik, als beginnende front end developer, 
+        kennis kan maken met de profesionele workflow en echt kan beginnen met groeien.
+      </p>
+    </div>
   </div>
   <div class="experience">
     <div class="left">
@@ -112,41 +114,43 @@
     </div>
   </div>
   <div class="other">
-    <h3>Overige Informatie</h3>
-    <table>
-      <tr>		
-        <td>Computervaardigheden:</td>
-        <td>Verschillende office pakketten (microsoft, Google, open source)<br>
-          AutoCad/ StabiCad (basis vaardigheden)<br>
-          Verschillende foto-, video- en audiobewerkings programma’s<br>
-          HTML/ CSS/ Javascript (basis vaardigheden)</td>
-      </tr>
-      <tr>
-        <td>Directe ontwikkelplannen:</td>
-        <td>Kennis Javascript verdiepen (object georienteerd programeren)<br>
-          Kennis maken met VUE<br>
-          kennis HTML/CSS verdiepen</td>
-      </tr>
-      <tr>
-        <td>overig:</td>
-        <td>bekend met werkvormen gebaseerd op scrum en kanban.</td>
-      </tr>
-      <tr>
-        <td>Hobby’s:</td>
-        <td>Mermaiding/ freediving, zwemmen en Kleding maken</td>
-      </tr>
-      <tr>
-        <td>Taalvaardigheden:</td>		
-      </tr>
-      <tr>
-        <td>Nederlands,  Engels:</td>
-        <td>Goed (verstaan, spreken, lezen en schrijven)</td>
-      </tr>
-      <tr>	
-        <td>Duits:</td> 
-        <td>matig (verstaan) en redelijk (lezen)</td>
-      </tr>
-    </table>
+    <div id="text">
+      <h3>Overige Informatie</h3>
+      <table>
+        <tr>		
+          <td>Computervaardigheden:</td>
+          <td>Verschillende office pakketten (microsoft, Google, open source)<br>
+            AutoCad / StabiCad (basis vaardigheden)<br>
+            Verschillende foto-, video- en audiobewerkings programma’s<br>
+            HTML / CSS / Javascript (basisvaardigheden)</td>
+        </tr>
+        <tr>
+          <td>Directe ontwikkelplannen:</td>
+          <td>Kennis Javascript verdiepen (object georienteerd programeren)<br>
+            Kennis maken met VUE<br>
+            kennis HTML / CSS verdiepen</td>
+        </tr>
+        <tr>
+          <td>overig:</td>
+          <td>bekend met werkvormen gebaseerd op scrum en kanban</td>
+        </tr>
+        <tr>
+          <td>Hobby’s:</td>
+          <td>Mermaiding / freediving, zwemmen en kleding maken</td>
+        </tr>
+        <tr>
+          <td>Taalvaardigheden:</td>		
+        </tr>
+        <tr>
+          <td>Nederlands,  Engels:</td>
+          <td>Goed (verstaan, spreken, lezen en schrijven)</td>
+        </tr>
+        <tr>	
+          <td>Duits:</td> 
+          <td>matig (verstaan) en redelijk (lezen)</td>
+        </tr>
+      </table>
+    </div>
   </div>
 </div>
 </body>
