--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
   <div class="about">
     <div id="text">
       <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
-      <p>Ik heb door de jaren heen een breed palet van vaardigheden opgedaan. 
-        Van de Kunst, via het onderwijs de bouw in. 
-        En bij het verkennen van deze verschillende vakgebieden zijn al mijn eerdere vaardigheden altijd op een verrassende manier van pas gekomen.
+      <p>Ik heb door de jaren heen een breed palet aan werkervaring opgedaan. 
+        Van de kunst, via het onderwijs de bouw in. 
+        En bij het verkennen van deze verschillende werkvelden zijn al mijn eerdere vaardigheden en ervaringen altijd op een verrassende manier van pas gekomen.
       </p> 
       <p>
-        Door ziekte heb ik moeten stoppen met werken in de bouw, dat ga ik heel erg missen, 
-        maar ik heb in webdevelopment een nieuwe passie gevonden. 
+        Door ziekte heb moest ik helaas stoppen met werken in de bouw, dat ga ik heel erg missen. 
+        Gelukkig heb ik in webdevelopment een nieuwe passie gevonden. 
         Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
-        De komende jaren zie ik mezelf doorgroeien tot fullstack webdeveloper, 
+        De komende jaren zie ik mezelf doorgroeien naar fullstack webdeveloper, 
         maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
         Daarom zoek ik een plek waar ik, als beginnende front end developer, 
-        kennis kan maken met de profesionele workflow en echt kan beginnen met groeien.
+        kennis kan maken met de professionele workflow en echt kan beginnen met groeien.
       </p>
     </div>
   </div>
