--- a/index.html
+++ b/index.html
@@ -20,24 +20,24 @@
   </div>
 </header>
   <div class=content>
-  <div class="about">
-    <div id="text">
-      <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
-      <p>Ik heb door de jaren heen een breed palet aan werkervaring opgedaan. 
-        Van de kunst, via het onderwijs de bouw in. 
-        En bij het verkennen van deze verschillende werkvelden zijn al mijn eerdere vaardigheden en ervaringen altijd op een verrassende manier van pas gekomen.
-      </p> 
-      <p>
-        Door ziekte heb moest ik helaas stoppen met werken in de bouw, dat ga ik heel erg missen. 
-        Gelukkig heb ik in webdevelopment een nieuwe passie gevonden. 
-        Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
-        De komende jaren zie ik mezelf doorgroeien naar fullstack webdeveloper, 
-        maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
-        Daarom zoek ik een plek waar ik, als beginnende front end developer, 
-        kennis kan maken met de professionele workflow en echt kan beginnen met groeien.
-      </p>
+    <div class="about">
+      <div id="text">
+        <h3>Als je valt sta je weer op, en iedere keer dat je dat doet leer je weer wat nieuws. </h3>
+        <p>Ik heb door de jaren heen een breed palet aan werkervaring opgedaan. 
+          Van de kunst, via het onderwijs de bouw in. 
+          En bij het verkennen van deze verschillende werkvelden zijn al mijn eerdere vaardigheden en ervaringen altijd op een verrassende manier van pas gekomen.
+        </p> 
+        <p>
+          Door ziekte heb moest ik helaas stoppen met werken in de bouw, dat ga ik heel erg missen. 
+          Gelukkig heb ik in webdevelopment een nieuwe passie gevonden. 
+          Ik pak de nieuwe informatie makkelijk op, en de uitdaging geeft me nieuwe energie. 
+          De komende jaren zie ik mezelf doorgroeien naar fullstack webdeveloper, 
+          maar in de boeken zitten totdat ik daar klaar voor ben is niet aan mijn besteed. 
+          Daarom zoek ik een plek waar ik, als beginnende front end developer, 
+          kennis kan maken met de professionele workflow en echt kan beginnen met groeien.
+        </p>
+      </div>
     </div>
-  </div>
   <div class="experience">
     <div class="left">
       <h3>Opleidingen</h3>
@@ -83,7 +83,7 @@
       	</tr>
       </table> 
       <h3>Portfolio</h3>
-      <p><a href="">Rock Paper Scissors</a></p> 
+      <p><a href="https://runa-girl.github.io/rps/">Rock Paper Scissors</a></p> 
     </div>
     <div class="right">
       <h3>Werkervaring</h3>
